src/test/ui/attributes/unknown-attr.stderr
error[E0658]: The attribute `mutable_doc` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/unknown-attr.rs:5:4
   |
LL | #![mutable_doc]
   |    ^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `dance` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/unknown-attr.rs:7:3
   |
LL | #[dance] mod a {}
   |   ^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `dance` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/unknown-attr.rs:9:3
   |
LL | #[dance] fn main() {}
   |   ^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
